# llmscan

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
llmscan/: catalog.py  cli.py  detector.py  estimator.py  huggingface.py  models.json  vram.py
tests/: conftest.py  test_add_dry_run.py  test_backend_flag.py  test_build.py  test_catalog.py  test_catalog_diff.py  test_catalog_update.py  test_cli.py  test_detector.py  test_doctor.py  test_estimator.py  test_huggingface.py  test_iq_quants.py  test_list_csv_output.py  test_list_filter_ux.py  test_list_filters.py  test_multi_gpu_scan.py  test_no_color.py  test_ollama_running.py  test_reason_codes.py  test_release.py  test_search_params_filter.py  test_security.py  test_shell_completions.py  test_version_check.py  test_vram.py
